[package]
name = "log-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
simple_logger = "4.3.3"
serde_json = "1.0.114"
async-std = "1.12.0"
axum = "0.7.4"
log = "0.4.20"
